--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#"><img class="logo" src="assets/Logo.png" alt="logo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <div id="nav-icon3">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Disabled</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<svg class="svg1" width="1920" height="1019" viewBox="0 0 1920 1019" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M1921 0.5H-0.5V1018.5C171 910.5 344 797 606.5 851.5C869 906 1145 1004 1364.5 952C1584 900 1638.47 876.235 1921 910.5V0.5Z" fill="white"/>
+    <path d="M1921 0.5H-0.5V1018.5C171 910.5 344 797 606.5 851.5C869 906 1145 1004 1364.5 952C1584 900 1638.47 876.235 1921 910.5V0.5Z" fill="white"/>
+</svg>
 
 
 <script src="script.js"></script>
