--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!--Styles + fontawesome-->
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-md navbar-light">
     <a class="navbar-brand" href="#"><img class="logo" src="assets/Logo.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <div id="nav-icon3">
@@ -28,23 +29,44 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="#">Oferta</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Disabled</a>
+                <a class="nav-link" href="#">Kontakt</a>
             </li>
         </ul>
     </div>
 </nav>
-<svg class="svg1" width="1920" height="1019" viewBox="0 0 1920 1019" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M1921 0.5H-0.5V1018.5C171 910.5 344 797 606.5 851.5C869 906 1145 1004 1364.5 952C1584 900 1638.47 876.235 1921 910.5V0.5Z" fill="white"/>
-    <path d="M1921 0.5H-0.5V1018.5C171 910.5 344 797 606.5 851.5C869 906 1145 1004 1364.5 952C1584 900 1638.47 876.235 1921 910.5V0.5Z" fill="white"/>
-</svg>
-
-
+<header>
+    <h1>Twój pomysł. Mój design.<br>Nasz sukces.</h1>
+    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur cupiditate in, minus, neque nisi non, numquam odio omnis quas quisquam sed vero voluptatibus. Amet beatae cum fugit, id labore laborum nostrum perspiciatis quibusdam quidem quisquam, quod reiciendis, rem suscipit unde?</h3>
+    <div class="container">
+        <img src="assets/header.png" alt="Header image">
+    </div>
+</header>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 227"><defs><style>.cls-1{fill:#f5f0e8;}.cls-2{fill:#fff;}</style></defs><path class="cls-1" d="M0,227c123-97.24,297.82-198.68,849-60.44,248,62.2,595-34.16,771-43.8s300,27.16,300,27.16V8H0Z"/><path class="cls-2" d="M0,219c123-97.24,297.82-198.68,849-60.44,248,62.2,595-34.16,771-43.8s300,27.16,300,27.16V0H0Z"/></svg>
+<section>
+    <div class="container">
+        <h2>Grafika 2D</h2>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos ducimus, eaque error id ipsum magni possimus quos? Atque, necessitatibus vero!</h4>
+        <img src="assets/2d.png" alt="Image - 2D">
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 177.9"><defs><style>.cls-1{fill:#f5f0e8;}</style></defs><path class="cls-1" d="M1920,160.77a166,166,0,0,0-72-31.37c-38.16-6.57-73.82,2.19-109,16.68-37.89,15.6-75.21,30.95-115,41.32A658.63,658.63,0,0,1,1504.64,207a668.29,668.29,0,0,1-239-26.17c-39.81-12-77-28.88-114.71-46-35.28-16.07-72.87-31.11-112.48-29.41-39.31,1.69-75.16,19.33-109.64,36.42-38.65,19.16-78,35-119.74,46.39-40.66,11.09-82.21,19-123.82,25.69-42.44,6.86-87.57,11.75-129-2.64a113.84,113.84,0,0,1-17-7.55,113.64,113.64,0,0,0,19.87-19.32c18.33-23,23.41-52.12,11.83-79.33-10.52-24.74-36.57-45.42-65.07-36.83-33.22,10-35.5,55.38-25.55,82.15,8,21.54,23.37,40.37,42.44,53.76-15.38,9.4-32.82,16-49.81,20.44C390.77,246.18,305,230.62,223,216.41c-40.83-7.08-81.77-14.14-123.15-17.2C69.33,197,30.28,192.29,3.34,210.49Q1.59,211.68,0,213v13.3c6-9.09,18-14.12,28.8-16.79,18.42-4.53,38.35-3.13,57.12-2.19,44.72,2.24,88.91,9.81,132.94,17.44,82.6,14.31,168.39,29.91,251.41,9.69,21.06-5.13,42.43-13,60.77-25A119.8,119.8,0,0,0,546.31,217c39.16,16.06,82.8,13.84,123.91,8.11,86.22-12,172.68-31.2,251-69.6,38-18.62,77.05-40.49,120.6-41.32,45.06-.86,86.63,20,126.35,38.41,74.09,34.39,152.55,56.28,234.31,62.85a674,674,0,0,0,246.46-25.75q29.69-8.89,58.4-20.63c20.08-8.22,39.74-17.54,60.41-24.27,38.91-12.67,80.25-11.77,117.64,5.5a155.23,155.23,0,0,1,34.63,22ZM530.88,198.69c-21.77-14.28-39-35.9-44.93-60.95-4.08-17.21-2.57-39.73,10.19-53.34,13.05-13.93,35.56-10.45,49.2.54,24.28,19.56,29.09,56.32,14.25,82.58C552.49,180.08,542.49,190.33,530.88,198.69Z" transform="translate(0 -66.2)"/></svg>
+    <div class="container">
+        <h2 class="reverse">Grafika 3D</h2>
+        <h4 class="reverse">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos ducimus, eaque error id ipsum magni possimus quos? Atque, necessitatibus vero!</h4>
+        <img class="reverseImg" src="assets/3d.png" alt="Image - 3D">
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 177.9"><defs><style>.cls-1{fill:#f5f0e8;}</style></defs><path class="cls-1" d="M1920,160.77a166,166,0,0,0-72-31.37c-38.16-6.57-73.82,2.19-109,16.68-37.89,15.6-75.21,30.95-115,41.32A658.63,658.63,0,0,1,1504.64,207a668.29,668.29,0,0,1-239-26.17c-39.81-12-77-28.88-114.71-46-35.28-16.07-72.87-31.11-112.48-29.41-39.31,1.69-75.16,19.33-109.64,36.42-38.65,19.16-78,35-119.74,46.39-40.66,11.09-82.21,19-123.82,25.69-42.44,6.86-87.57,11.75-129-2.64a113.84,113.84,0,0,1-17-7.55,113.64,113.64,0,0,0,19.87-19.32c18.33-23,23.41-52.12,11.83-79.33-10.52-24.74-36.57-45.42-65.07-36.83-33.22,10-35.5,55.38-25.55,82.15,8,21.54,23.37,40.37,42.44,53.76-15.38,9.4-32.82,16-49.81,20.44C390.77,246.18,305,230.62,223,216.41c-40.83-7.08-81.77-14.14-123.15-17.2C69.33,197,30.28,192.29,3.34,210.49Q1.59,211.68,0,213v13.3c6-9.09,18-14.12,28.8-16.79,18.42-4.53,38.35-3.13,57.12-2.19,44.72,2.24,88.91,9.81,132.94,17.44,82.6,14.31,168.39,29.91,251.41,9.69,21.06-5.13,42.43-13,60.77-25A119.8,119.8,0,0,0,546.31,217c39.16,16.06,82.8,13.84,123.91,8.11,86.22-12,172.68-31.2,251-69.6,38-18.62,77.05-40.49,120.6-41.32,45.06-.86,86.63,20,126.35,38.41,74.09,34.39,152.55,56.28,234.31,62.85a674,674,0,0,0,246.46-25.75q29.69-8.89,58.4-20.63c20.08-8.22,39.74-17.54,60.41-24.27,38.91-12.67,80.25-11.77,117.64,5.5a155.23,155.23,0,0,1,34.63,22ZM530.88,198.69c-21.77-14.28-39-35.9-44.93-60.95-4.08-17.21-2.57-39.73,10.19-53.34,13.05-13.93,35.56-10.45,49.2.54,24.28,19.56,29.09,56.32,14.25,82.58C552.49,180.08,542.49,190.33,530.88,198.69Z" transform="translate(0 -66.2)"/></svg>
+    <div class="container">
+        <h2>Grafika 2D</h2>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos ducimus, eaque error id ipsum magni possimus quos? Atque, necessitatibus vero!</h4>
+        <img src="assets/2d.png" alt="Image - 2D">
+    </div>
+</section>
 <script src="script.js"></script>
 </body>
 </html>
