--- a/index.html
+++ b/index.html
@@ -67,8 +67,29 @@
         <img src="assets/frontend.png" alt="Front-end">
     </div>
 </section>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1921 219"><defs><style>.cls-3{fill:#ffc126;}</style></defs><path class="cls-3" d="M-.5,136.5c65,18,251,97,370,61s193-131,381-130,472,190,661,173,509-209,509-209l-1,219H-.5Z" transform="translate(0.5 -31.5)"/></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1921 219"><defs><style>.cls-3{fill: #c59830;}</style></defs><path class="cls-3" d="M-.5,136.5c65,18,251,97,370,61s193-131,381-130,472,190,661,173,509-209,509-209l-1,219H-.5Z" transform="translate(0.5 -31.5)"/></svg>
 <section class="section2">
+    <div class="container">
+        <h2>Portfolio</h2>
+        <div class="buttons">
+            <button id="all" class="btn btn-light">Wszystko</button>
+            <button id="2d" class="btn btn-light">2D</button>
+            <button id="3d" class="btn btn-light">3D</button>
+            <button id="Frontend" class="btn btn-light">Frontend</button>
+        </div>
+        <div id="container" class="row">
+            <div class="items">
+                <img class="item 2d" src="assets/2.jpg" alt="">
+                <img class="item 2d" src="assets/2.jpg" alt="">
+                <img class="item frontend" src="assets/coded.jpg" alt="">
+                <img class="item 3d" src="assets/Render.png" alt="">
+                <img class="item 2d" src="assets/2.jpg" alt="">
+                <img class="item 2d" src="assets/2.jpg" alt="">
+                <img class="item frontend" src="assets/coded.jpg" alt="">
+                <img class="item 2d" src="assets/2.jpg" alt="">
+            </div>
+        </div>
+    </div>
 </section>
 <script src="script.js"></script>
 </body>
