Add rwd to gallery

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     <div class="container">
         <h2>Portfolio</h2>
         <div class="buttons">
-            <button id="all" onclick="filter('all')" class="btn btn-light click active">Wszystko</button>
-            <button id="2d" onclick="filter('2d')" class="btn btn-light click">2D</button>
-            <button id="3d" onclick="filter('3d')" class="btn btn-light click">3D</button>
-            <button id="frontend" onclick="filter('frontend')" class="btn btn-light click">Frontend</button>
+            <button id="all" onclick="filter('all')" class="col-lg-3 col-md-6 btn btn-light click active">Wszystko</button>
+            <button id="2d" onclick="filter('2d')" class="col-lg-3 col-md-6 btn btn-light click">2D</button>
+            <button id="3d" onclick="filter('3d')" class="col-lg-3 col-md-6 btn btn-light click">3D</button>
+            <button id="frontend" onclick="filter('frontend')" class="col-lg-3 col-md-6 btn btn-light click">Frontend</button>
         </div>
         <div id="container" class="row">
             <div class="items">
