--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="home" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>JK Design Portfolio</title>
@@ -16,7 +16,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-light">
-    <a class="navbar-brand" href="#"><img class="logo" src="assets/Logo.png" alt="logo"></a>
+    <a class="navbar-brand" href="#home"><img class="logo" src="assets/Logo.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <div id="nav-icon3">
             <span></span>
@@ -29,13 +29,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Oferta</a>
+                <a class="nav-link" href="#services">Oferta</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Kontakt</a>
+                <a class="nav-link" href="#contact">Kontakt</a>
             </li>
         </ul>
     </div>
@@ -47,7 +47,7 @@
         <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur cupiditate in, minus, neque nisi non, numquam odio omnis quas quisquam sed vero voluptatibus. Amet beatae cum fugit, id labore laborum nostrum perspiciatis quibusdam quidem quisquam, quod reiciendis, rem suscipit unde?</h3>
     </div>
 </header>
-<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 227"><defs><style>.cls-1{fill:#d6c9b6;}.cls-2{fill:#fff;}</style></defs><path class="cls-1" d="M0,227c123-97.24,297.82-198.68,849-60.44,248,62.2,595-34.16,771-43.8s300,27.16,300,27.16V8H0Z"/><path class="cls-2" d="M0,219c123-97.24,297.82-198.68,849-60.44,248,62.2,595-34.16,771-43.8s300,27.16,300,27.16V0H0Z"/></svg>
+<svg id="services" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 227"><defs><style>.cls-1{fill:#d6c9b6;}.cls-2{fill:#fff;}</style></defs><path class="cls-1" d="M0,227c123-97.24,297.82-198.68,849-60.44,248,62.2,595-34.16,771-43.8s300,27.16,300,27.16V8H0Z"/><path class="cls-2" d="M0,219c123-97.24,297.82-198.68,849-60.44,248,62.2,595-34.16,771-43.8s300,27.16,300,27.16V0H0Z"/></svg>
 <section class="section1">
     <div class="row">
         <h2>Grafika 2D</h2>
@@ -67,7 +67,7 @@
         <img src="assets/frontend.png" alt="Front-end">
     </div>
 </section>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1921 219"><defs><style>.cls-3{fill: #c59830;}</style></defs><path class="cls-3" d="M-.5,136.5c65,18,251,97,370,61s193-131,381-130,472,190,661,173,509-209,509-209l-1,219H-.5Z" transform="translate(0.5 -31.5)"/></svg>
+<svg id="portfolio" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1921 219"><defs><style>.cls-3{fill: #c59830;}</style></defs><path class="cls-3" d="M-.5,136.5c65,18,251,97,370,61s193-131,381-130,472,190,661,173,509-209,509-209l-1,219H-.5Z" transform="translate(0.5 -31.5)"/></svg>
 <section class="section2">
     <div class="container">
         <h2>Portfolio</h2>
