Add contact page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>JK Design Portfolio</title>
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
+    <!--i18 translator-->
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -11,6 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!--Styles + fontawesome-->
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/2687ebb00a.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif&amp;subset=latin-ext" rel="stylesheet">
 </head>
@@ -28,6 +30,12 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
+            <li class="nav-item">
+                <img class="flag" src="./assets/poland.png" />
+            </li>
+            <li class="nav-item">
+                <img class="flag" src="./assets/england.png" />
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="#services">Oferta</a>
             </li>
@@ -67,7 +75,7 @@
         <img src="assets/frontend.png" alt="Front-end">
     </div>
 </section>
-<svg id="portfolio" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1921 219"><defs><style>.cls-3{fill: #c59830;}</style></defs><path class="cls-3" d="M-.5,136.5c65,18,251,97,370,61s193-131,381-130,472,190,661,173,509-209,509-209l-1,219H-.5Z" transform="translate(0.5 -31.5)"/></svg>
+<svg id="portfolio" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1921 219"><defs><style>.cls-3{fill: #ecad2e;}</style></defs><path class="cls-3" d="M-.5,136.5c65,18,251,97,370,61s193-131,381-130,472,190,661,173,509-209,509-209l-1,219H-.5Z" transform="translate(0.5 -31.5)"/></svg>
 <section class="section2">
     <div class="container">
         <h2>Portfolio</h2>
@@ -98,6 +106,21 @@
             </div>
             <div onclick="showMore()" class="btn btn-light more">Show more</div>
         </div>
+    </div>
+</section>
+<section class="section3" id="contact">
+    <div class="container">
+        <h3 class="send">SEND ME AN EMAIL</h3>
+        <div class="contact">
+            <p class="mail">jklasecki@gmail.com</p>
+            <div class="social">
+                <a><i class="fab fa-instagram"></i></a>
+                <a><i class="fab fa-facebook-f"></i></a>
+                <a><i class="fab fa-github"></i></a>
+                <a><i class="fab fa-dribbble"></i></a>
+            </div>
+        </div>
+        <p class="copywright">Copyright © JK-Design 2019</p>
     </div>
 </section>
 <script src="script.js"></script>
